libsdl2 (2.0.4+dfsg2-1) UNRELEASED; urgency=medium

  [ Manuel A. Fernandez Montecelo ]
  * Bump Policy Standards-Version to 3.9.7 (no changes needed)
  * Drop -dbg package

  [ Gianfranco Costamagna ]
  * Fix insecure VCS fields.
  * Re-import the same tarball without SDL-qsort.c file.
    - the license issue is fixed already, because the original
      maintainer relicensed it (so we are adding it as a patch now)
      this repack can be removed in the next upstream tarball import.
      (Closes: #814276).

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sun, 21 Feb 2016 19:08:44 +0000

libsdl2 (2.0.4+dfsg1-2) unstable; urgency=low

  * Upload to unstable

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 18 Jan 2016 16:36:59 +0100

libsdl2 (2.0.4+dfsg1-1) experimental; urgency=medium

  * Team upload.
  * run wrap-and-sort -sa.
  * Fix copyright lintian warning.
  * Update copyright to new release.
  * New upstream release (Closes: #788688, #798265, #788540)
    - Drop patches use-default-screen and
      fix_joystick_misc_axes.diff, applied upstream.
  * Add Files-Excluded keyword to copyright file, allowing to
    import a new release with uscan command. (Closes: #804662)
  * Create new -doc package, and move examples into it (Closes: #739430).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 03 Jan 2016 12:12:54 +0100

libsdl2 (2.0.2+dfsg1-8) unstable; urgency=medium

  * Change to improve build reproducibility: tar file permission modes.
    Thanks Reiner Herrmann. (Closes: #803578)
  * Build with sndio support (Closes: #799707)
  * Update d/copyright to adapt to minor changes in code and files moved
    around, and quell lintian (spelling-error-in-copyright,
    wildcard-matches-nothing-in-dep5-copyright and
    unused-file-paragraph-in-dep5-copyright)

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sun, 01 Nov 2015 00:55:03 +0000

libsdl2 (2.0.2+dfsg1-7) unstable; urgency=medium
