@@ -33,6 +33,9 @@ ifeq (hurd,$(findstring hurd,$(DEB_HOST_ARCH_CPU)))
   confflags += --disable--video-opengles
 endif
 
+# for reproducible builds, timestamps_in_tarball
+SOURCE_DATE := $(shell dpkg-parsechangelog --show-field=Date)
+
 
 %:
 	dh $@ --with autoreconf --parallel
@@ -68,7 +71,7 @@ override_dh_auto_configure:
 	dh_auto_configure -- $(confflags)
 
 override_dh_auto_build-indep:
-	tar czf debian/examples.tar.gz test --owner=0 --group=0 --mode=go=rX,u+rw,a-s
+	tar czf debian/examples.tar.gz test --owner=0 --group=0 --mode=go=rX,u+rw,a-s --clamp-mtime --mtime="$(SOURCE_DATE)"
 	doxygen docs/doxyfile
 	# useless files
 	find output -name "*.md5" -delete
